--- a/studio/conf/application.conf
+++ b/studio/conf/application.conf
@@ -70,6 +70,8 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-# Default url for mongo database
+# Default url for mongo database on localhost.
 mongo.mongodb.host="127.0.0.1"
 
+# Name of the database used by this application to store its data.
+mongo.database.name="emr-data-analytics-studio"
