Implemented reflection-based parameter sources.

--- a/studio/conf/application.conf
+++ b/studio/conf/application.conf
@@ -75,3 +75,6 @@ mongo.mongodb.host="127.0.0.1"
 
 # Name of the database used by this application to store its data.
 mongo.database.name="emr-data-analytics-studio"
+
+#plugin paths
+plugins.path="../plugins/target/"
