--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>analytics-models</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 
 </project>
