--- a/utilities/Wrapper/pom.xml
+++ b/utilities/Wrapper/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>analytics-models</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+        </dependency>
     </dependencies>
 
 </project>
