Added Kafka consumer functionality so that online jobs can writes to Kafka.

--- a/service/src/main/resources/conf/python.properties
+++ b/service/src/main/resources/conf/python.properties
@@ -1,4 +1,4 @@
 
 # python interpreter properties
 python.command=python
-python.tempDir=../utilities/pyspark-algorithms
+python.workingDir=../utilities/pyspark-algorithms
