--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>emr.analytics.diagram-interpreter</groupId>
-    <artifactId>diagram-interpreter</artifactId>
+    <groupId>emr.analytics.compiler</groupId>
+    <artifactId>analytics-compiler</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <java.version>1.8</java.version>
