--- a/studio/conf/application.conf
+++ b/studio/conf/application.conf
@@ -71,7 +71,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Default url for mongo database on localhost.
-mongo.mongodb.host="127.0.0.1"
+mongo.mongodb.host="mongo"
 
 # Name of the database used by this application to store its data.
 mongo.database.name="emr-data-analytics-studio"
