--- a/utilities/Wrapper/pom.xml
+++ b/utilities/Wrapper/pom.xml
@@ -7,6 +7,9 @@
     <groupId>Wrapper</groupId>
     <artifactId>Wrapper</artifactId>
     <version>1.0</version>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -30,5 +33,19 @@
             <version>0.9.9-RC1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
