--- a/studio/conf/application.conf
+++ b/studio/conf/application.conf
@@ -70,7 +70,10 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-# Default url for mongo database on localhost.
+# host for analytics service
+analytics.service.host="127.0.0.1"
+
+# mongodb host
 mongo.mongodb.host="mongo"
 
 # Name of the database used by this application to store its data.
