Cleaned up docker files.

--- a/deploy/spark/Dockerfile
+++ b/deploy/spark/Dockerfile
@@ -1,6 +1,6 @@
-# Dockerizing Spark
+## Dockerizing Spark
 
-FROM emr/java8:latest
+FROM emr/base:latest
 
 MAINTAINER PSS Applied Research
 
@@ -10,5 +10,8 @@ RUN cd /usr/local && \
    tar -xzvf spark-1.4.1-bin-hadoop2.6.tgz && \
    rm spark-1.4.1-bin-hadoop2.6.tgz && \
    ln -s spark-1.4.1-bin-hadoop2.6 spark
+
+# copy over kafka spark streaming library
+COPY spark-streaming-kafka-assembly_2.10-1.4.1.jar /usr/local/spark/external/kafka-assembly/spark-streaming-kafka-assembly_2.10-1.4.1.jar
 
 ENV SPARK_HOME /usr/local/spark
