--- a/service/src/main/resources/service.conf
+++ b/service/src/main/resources/service.conf
@@ -7,6 +7,7 @@ akka {
   remote {
     netty.tcp {
       hostname = "127.0.0.1"
+      hostname = ${?ANALYTICS_HOST}
       port = 2552
     }
   }
