--- a/studio/conf/application.conf
+++ b/studio/conf/application.conf
@@ -72,9 +72,11 @@ logger.application=DEBUG
 
 # host for analytics service
 analytics.service.host="127.0.0.1"
+analytics.service.host=${?ANALYTICS_HOST}
 
 # mongodb host
-mongo.mongodb.host="mongo"
+mongo.mongodb.host="127.0.0.1"
+mongo.mongodb.host=${?ANALYTICS_HOST}
 
 # Name of the database used by this application to store its data.
 mongo.database.name="emr-data-analytics-studio"
